Z-index fixes
Fixed Z-index for Menu, Action bar, & hero

--- a/less/uams.homeslider.less
+++ b/less/uams.homeslider.less
@@ -50,7 +50,7 @@
 			text-align: left;
 			cursor: pointer;
 			padding: 14px 14px 20px 14px;
-			z-index: 11;
+			z-index: 1;
 			.uwn-slideshow-next-text {
 				font-weight: bold;
 				font-style: italic;
